Pass file name when downloading OMA DRM files

When downloading a OMA DRM file, currently we use Android DownloadManager
to generate the file path.
This is because the Android DM may rename the file.
However, the Android DownloadManager will by default save the file to an
internal directory, which cannot be accessed by other apps.
This CL passes the file name from native to Android DownloadManager.
So the file path generation will be determined by Chrome.
This change also fixes the problem of openning a DRM download from snackbar.
Instead of openning download home, this CL will open the Downloads app instead.

BUG=708172

Review-Url: https://codereview.chromium.org/2797003002
Cr-Commit-Position: refs/heads/master@{#461906}

Former-commit-id: b226550dbd1834c2f7addec9d1df7d57498fb7fc