chrome/browser/android/download/chrome_download_delegate.cc
@@ -131,7 +131,7 @@ void ChromeDownloadDelegate::RequestFileAccess(intptr_t callback_id) {
 void ChromeDownloadDelegate::EnqueueDownloadManagerRequest(
     const std::string& url,
     const std::string& user_agent,
-    const std::string& content_disposition,
+    const base::string16& file_name,
     const std::string& mime_type,
     const std::string& cookie,
     const std::string& referer) {
@@ -140,17 +140,17 @@ void ChromeDownloadDelegate::EnqueueDownloadManagerRequest(
       ConvertUTF8ToJavaString(env, url);
   ScopedJavaLocalRef<jstring> juser_agent =
       ConvertUTF8ToJavaString(env, user_agent);
-  ScopedJavaLocalRef<jstring> jcontent_disposition =
-      ConvertUTF8ToJavaString(env, content_disposition);
   ScopedJavaLocalRef<jstring> jmime_type =
       ConvertUTF8ToJavaString(env, mime_type);
   ScopedJavaLocalRef<jstring> jcookie =
       ConvertUTF8ToJavaString(env, cookie);
   ScopedJavaLocalRef<jstring> jreferer =
       ConvertUTF8ToJavaString(env, referer);
+  ScopedJavaLocalRef<jstring> jfile_name =
+      base::android::ConvertUTF16ToJavaString(env, file_name);
   Java_ChromeDownloadDelegate_enqueueAndroidDownloadManagerRequest(
-      env, java_ref_, jurl, juser_agent, jcontent_disposition, jmime_type,
-      jcookie, jreferer);
+      env, java_ref_, jurl, juser_agent, jfile_name, jmime_type, jcookie,
+      jreferer);
 }
 
 void Init(JNIEnv* env,
