chrome/android/javatests/src/org/chromium/chrome/browser/download/DownloadManagerServiceTest.java
@@ -208,7 +208,7 @@ public class DownloadManagerServiceTest {
         @Override
         public void onDownloadSucceeded(
                 DownloadInfo downloadInfo, int notificationId, long downloadId,
-                boolean canBeResolved) {
+                boolean canBeResolved, boolean usesAndroidDownloadManager) {
             mSucceeded = true;
         }
 
